--- a/home.html
+++ b/home.html
@@ -236,7 +236,7 @@ All completed applications to be sent to :</b> TMS Periwinkle, <br>#243, 6th Mai
 	</div>
 
 <footer class="footer-section">
-		<h2>2018 All rights reserved <a href="https://colorlib.com" target="_blank">Montessori Institute of Bangalore</a></h2>
+		<h2>2018 All rights reserved <a href="https://edudemy.com" target="_blank">Montessori Institute of Bangalore</a></h2>
 	</footer>
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/jquery-2.1.4.min.js"></script>
