UpdATED COMING SOON ADDRESS

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 						<h2 style="color:#ffffff">Contact us</h2>
 					<h3 class="mt60" style="color: white">Main Office</h3><br>
 					<p class="con-item" style="color: white">South of Bangalore, Banashankari 2nd stage.<br></p>
-										<p class="con-item" style="color: white"><b>*The address will be provided shortly.*</b><br></p>
+										<p class="con-item" style="color: white"><b>#1592, Sai Nilaya, 35th cross, Banashankari 2nd Stage<br> Bangalore - 560061</b><br></p>
 										<p class="con-item" style="color: white"><b>Directions to the Training Centre :</b> Coming soon.</p>
 										<p class="con-item" style="color: white"><b>
 All completed applications to be sent to :</b> TMS Periwinkle, <br>#243, 6th Main road, 4th Phase, Dollar Layout, JP Nagar,<br> Bangalore - 560078</p>
