--- a/course_overview.html
+++ b/course_overview.html
@@ -240,7 +240,7 @@ Applications must be submitted with all enclosures. The Admissions Review Commit
 							
 							<p style="font-size:17px"><b>The last date for Application for Foreign Nationals is February 28, 2019.</b> No applications from Foreign Nationals will be accepted after this date.
 
-<br>Fee structure for applications reaching us on or before January 05, 2019<br></b></p>
+								<br>Fee structure for applications reaching us <b> on or before January 05, 2019 </b> <br></b></p>
 								<table style="width:100%">
 
 <tr bgcolor="#570A05"><th style="color: white">Fees</th>	<th style="color: white">Indian Nationals</th> <th style="color: white">Foreign Nationals US$</th>    <th style="color: white">Due</th></tr> 
@@ -253,7 +253,7 @@ Applications must be submitted with all enclosures. The Admissions Review Commit
 <br>
 <p style="font-size:17px">* Service Tax as applicable<br><br>
 
-Fee structure for applications (Indian Nationals) reaching us <b>on or after July 06, 2018</b><br></p>
+Fee structure for applications (Indian Nationals) reaching us <b>on or after January 05, 2019</b><br></p>
 <table style="width:100%">
 
 <tr bgcolor="#570A05"><th style="color: white">Fees</th>	<th style="color: white">Indian Nationals</th> <th style="color: white">Foreign Nationals US$</th>    <th style="color: white">Due</th></tr> 
