--- a/course_overview.html
+++ b/course_overview.html
@@ -240,7 +240,7 @@ Applications must be submitted with all enclosures. The Admissions Review Commit
   </tr>
  
 <tr><td>Module I</td>	<td>Monday,April 22,  2019 </td> 	<td>Friday, May 31, 2019</td> </tr>
-<tr><td>Module II</td>	<td>Monday, October 28, 2019 </td> 	<td>Monday, Friday, December 20, 2019 </td> </tr>
+<tr><td>Module II</td>	<td>Monday, October 28, 2019 </td> 	<td>Friday, December 20, 2019 </td> </tr>
 <tr><td>Module III</td>	<td>Monday,  May 25, 2020</td> <td>Friday June 26, 2020</td> </tr>
 
 </table>
