--- a/course_overview.html
+++ b/course_overview.html
@@ -269,7 +269,7 @@ Applications must be submitted with all enclosures. The Admissions Review Commit
 <br>
 <p style="font-size:17px">* Service Tax as applicable<br><br>
 
-Fee structure for applications (Indian Nationals) reaching us <b>on or after January 05, 2019</b><br></p>
+Fee structure for applications (Indian Nationals) reaching us <b>after January 01, 2019</b><br></p>
 <table style="width:100%">
 
 <tr bgcolor="#570A05"><th style="color: white">Fees</th>	<th style="color: white">Indian Nationals</th> <th style="color: white">Foreign Nationals US$</th>    <th style="color: white">Due</th></tr> 
