--- a/course_overview.html
+++ b/course_overview.html
@@ -374,6 +374,14 @@ As an AMI 0-3 Director of Training Julia has completed Diploma Courses in Austra
 		
 		<br> <br>
 	
+		
+		
+
+	<div class="page-section spad">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-sm-7 blog-posts">
+					<!-- Single Post -->
 						
 <div>	
 	<li>
@@ -392,7 +400,11 @@ As an AMI 0-3 Director of Training Julia has completed Diploma Courses in Austra
 							<img src="img/3-6.jpg" alt="" width="350px">
 							
 						</div>
-		
+					</div>
+											</div>
+						</div>
+						</div>
+
 		
 	<h2 id="C36"> <br> AMI Montessori Primary Diploma Course</h2>
 		
