--- a/home.html
+++ b/home.html
@@ -107,7 +107,7 @@
       <h2>Montessori Institute of Bangalore</h2>
     </div>
     <div class="modal-body">
-      <p>AMI Montessori Infancy (0-3 Years) Diploma Course commencing April 2019 in Bangalore. Registrations open!'</p>
+      <p>AMI Montessori Infancy (0-3 Years) Diploma Course commencing April 2019 in Bangalore. Registrations open!</p>
     </div>
     <div class="modal-footer">
       <h3>course @ montessoribangalore . org</h3>
