--- a/course_overview.html
+++ b/course_overview.html
@@ -257,7 +257,7 @@ Applications must be submitted with all enclosures. The Admissions Review Commit
 							
 							<p style="font-size:17px"><b>The last date for Application for Foreign Nationals is February 28, 2019.</b> No applications from Foreign Nationals will be accepted after this date.
 
-								<br>Fee structure for applications reaching us <b> after January 01, 2019 </b> <br></b></p>
+								<br>Fee structure for applications reaching us <b> before January 01, 2019 </b> <br></b></p>
 								<table style="width:100%">
 
 <tr bgcolor="#570A05"><th style="color: white">Fees</th>	<th style="color: white">Indian Nationals</th> <th style="color: white">Foreign Nationals US$</th>    <th style="color: white">Due</th></tr> 
