--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<div class="col-md-6 col-push"    >
 						<h2 style="color:#ffffff">Contact us</h2>
 					<h3 class="mt60" style="color: white">Main Office</h3><br>
-					<p class="con-item" style="color: white"><br></p>
+					<p class="con-item" style="color: white"></p>
 										<p class="con-item" style="color: white"><b>#1592, Sai Nilaya, 35th cross, Banashankari 2nd Stage<br> Bangalore - 560061</b><br></p>
 										<p class="con-item" style="color: white"><b> <a href="https://goo.gl/maps/czgo6CN12392"> Directions to the Training Centre </a> </b> </p>
 										<p class="con-item" style="color: white"><b>
