--- a/course_overview.html
+++ b/course_overview.html
@@ -640,7 +640,7 @@ Indian Nationals may pay the fees by means of a crossed local cheque or Demand D
 
 						<div class="col-md-3">
 					<div class="promo-btn-area">
-						<a href="diploma_course_application_form.pdf" class="site-btn btn-2"> <br> Primary Diploma APPLICATION FORM<br>(PDF)</a>
+						<a href="diploma_course_application_form.pdf" class="site-btn btn-2"> <br>Primary Diploma APPLICATION FORM(PDF)</a>
 					</div>
 				</div>
 				<div class="col-md-3" style="margin-left: 50px">
