--- a/course_overview.html
+++ b/course_overview.html
@@ -640,13 +640,13 @@ Indian Nationals may pay the fees by means of a crossed local cheque or Demand D
 
 						<div class="col-md-3">
 					<div class="promo-btn-area">
-						<a href="diploma_course_application_form.pdf" class="site-btn btn-2">Primary Diploma APPLICATION FORM <br>(PDF)</a>
+						<a href="diploma_course_application_form.pdf" class="site-btn btn-2">Primary Diploma APPLICATION <br>(PDF)</a>
 					</div>
 				</div>
 				<div class="col-md-3" style="margin-left: 50px"  "margin-bottom: 25px";
 }>
 					<div class="promo-btn-area">
-						<a href="diploma_course_application_form.docx" class="site-btn btn-2">Primary Diploma APPLICATION FORM<br>(WORD)</a>
+						<a href="diploma_course_application_form.docx" class="site-btn btn-2">Primary Diploma APPLICATION <br>(WORD)</a>
 					</div>
 				</div>
 							
